--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@material-ui/icons": "^4.9.1",
     "antd": "^4.8.6",
     "autoprefixer": "^10.2.5",
-    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
@@ -25,8 +24,7 @@
     "next": "10.2",
     "next-sitemap": "^1.6.57",
     "npm-run-all": "^4.1.5",
-    "passport": "^0.4.1",
-    "passport-google-oauth2": "^0.2.0",
+    "nprogress": "^0.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
