--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jwt-decode": "^3.1.2",
     "line-awesome": "^1.3.0",
     "moment": "^2.29.1",
-    "next": "10.2",
+    "next": "^11.0.0",
     "next-sitemap": "^1.6.57",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
